--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  text-decoration: none!important;
+  text-decoration: none !important;
 }
 
 /* Navbar */
@@ -29,4 +29,18 @@
 }
 .shop-basket-icon span {
   padding-left: 10px;
+}
+/* Home Page */
+.custom-card {
+  min-height: 250px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  padding: 10px;
+}
+.custom-card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 100%;
 }
